Corrected types and iterator.